# Sodum

./: .clang-format  .gitattributes  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  TODOS  TODOS.md  clang-format.sh  cmake_install.cmake  log.txt
Grammar/examples/: 01_basic_declarations.sod  02_multiple_declarations.sod  03_declaration_with_initializer.sod  04_simple_assignment.sod  05_variable_to_variable_assignment.sod  06_arithmetic_expression.sod  07_parenthesized_expression.sod  08_nested_expression.sod  09_expression_statement_literal.sod  10_expression_statement_identifier.sod  11_multiple_statements.sod  12_mixed_declarations_and_exprs.sod  add.sod  conditionals.sod  dsu.sod  general.sod  hello.sod  llvm_test_num.sod  llvm_test_variables.sod  loop.sod  loops.sod  structure.bnf  test.sod  test_1.sod  test_2_math.sod  test_3_parsefactor.sod  testing.sod
Grammar/structre/: mvp_grammar.ebnf  structure.bnf  structure.ebnf
include/: tokens.hpp
include/lexer/: lexer.hpp
include/parser/: ast.hpp  ast_v1.1.hpp  parser.hpp  parser_v1.hpp
include/visitor/: ast_visitor.hpp  llvm_codegen.hpp  visitor.hpp
src/: lexer.cpp  main.cpp  parser.cpp  parser_v1.0.cpp
src/visitors/: ast_accept.cpp  ast_printer.cpp  llvm_codegen.cpp
